# docs/swagger.json
@@ -991,7 +991,13 @@
                 "highest_level": {
                     "type": "number"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "is_booked": {
+                    "type": "boolean"
+                },
+                "is_host": {
                     "type": "boolean"
                 },
                 "latitude": {
